<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipePageActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_strMealThumb"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                tools:src="@tools:sample/avatars" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textview_strMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/textview_strMeal"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textview_label_strIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="20dp"
                android:text="@string/textview_label_strIngredients"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_strIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/textview_strIngredients"
                android:textSize="20sp"
                android:textStyle="normal" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="100dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textview_label_strInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="20dp"
                android:text="@string/textview_label_strInstructions"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_strInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:text="@string/textview_strInstructions"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>